--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "homepage": "https://github.com/samnnodim/lettera#readme",
   "devDependencies": {
     "electron-prebuilt": "^1.0.1"
+  },
+  "dependencies": {
+    "electron-prebuilt": "^1.0.1"
   }
 }
