--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "electron-prebuilt": "^1.0.1"
   },
   "dependencies": {
-    "electron-prebuilt": "^1.0.1"
+    "electron-prebuilt": "^1.0.1",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2"
   }
 }
